bugzilla/vector.css: Fix <pre> overflow
* In stack traces output by BugZilla, these lines span for miles off
  screen. And in some other areas as well.

--- a/bugzilla-4.0/skins/contrib/Wikimedia/vector.css
+++ b/bugzilla-4.0/skins/contrib/Wikimedia/vector.css
@@ -406,6 +406,7 @@ pre {
 	color: black;
 	background-color: #f9f9f9;
 	line-height: 1.1em;
+	word-wrap: break-word;
 }
 tbody.file pre {
      padding: 0;
